tests/snapshots/quests/parse_samples__snapshot_parse_all_sample_quests@samples__GT_New_Horizons_2.8.4_Client_Java_8.zip__config__betterquesting__DefaultQuests__Quests__StoringandTransf-AAAAAAAAAAAAAAAAAAAAIQ==__16SlotLVBatteryB-AAAAAAAAAAAAAAAAAAACmA==.json.snap
---
source: tests/parse_samples.rs
expression: quest
---
{
  "id": 664,
  "prerequisites": [
    619
  ],
  "properties": {
    "auto_claim": false,
    "desc": "Upgrade your battery buffer to hold 16 batteries for primary storage.\n\nYou can use different buffers - probably with fewer batteries - for your EBF, Arc Furnace, Thermal Centrifuge, and so on.",
    "global_share": true,
    "icon": null,
    "is_global": false,
    "is_main": false,
    "is_silent": false,
    "locked_progress": 0,
    "name": "16 Slot LV Battery Buffer",
    "party_single_reward": false,
    "quest_logic": "AND",
    "repeat_relative": true,
    "repeat_time": -1,
    "simultaneous": false,
    "snd_complete": "random.levelup",
    "snd_update": "random.levelup",
    "task_logic": "AND",
    "visibility": "NORMAL"
  },
  "required_prerequisites": [
    619
  ],
  "rewards": [],
  "tasks": []
}
