tests/snapshots/quests/parse_samples__snapshot_parse_all_sample_quests@samples__GT_New_Horizons_2.8.4_Client_Java_8.zip__config__betterquesting__DefaultQuests__Quests__StoringandTransf-AAAAAAAAAAAAAAAAAAAAIQ==__Canwegetmuchhigh-13PWs3MhTUOgkIQq8EKhaQ==.json.snap
---
source: tests/parse_samples.rs
expression: quest
---
{
  "id": 8295996942782210409,
  "prerequisites": [
    3295
  ],
  "properties": {
    "auto_claim": false,
    "desc": "With the EU transfer rates!",
    "global_share": false,
    "icon": null,
    "is_global": null,
    "is_main": false,
    "is_silent": false,
    "locked_progress": 0,
    "name": "Can we get much higher?",
    "party_single_reward": null,
    "quest_logic": "AND",
    "repeat_relative": true,
    "repeat_time": -1,
    "simultaneous": false,
    "snd_complete": "random.levelup",
    "snd_update": "random.levelup",
    "task_logic": "AND",
    "visibility": "NORMAL"
  },
  "required_prerequisites": [
    3295
  ],
  "rewards": [],
  "tasks": []
}
