tests/snapshots/quests/parse_samples__snapshot_parse_all_sample_quests@samples__GT_New_Horizons_2.8.4_Client_Java_8.zip__config__betterquesting__DefaultQuests__Quests__StoringandTransf-AAAAAAAAAAAAAAAAAAAAIQ==__EUpacketsflowing-AAAAAAAAAAAAAAAAAAAFig==.json.snap
---
source: tests/parse_samples.rs
expression: quest
---
{
  "id": 1418,
  "prerequisites": [
    1416
  ],
  "properties": {
    "auto_claim": false,
    "desc": "...in my dreams. What if instead of having battery packs on every generator, we could centralize all the generation in one location? Put it away from the well traveled parts of the base? Out in the country somewhere? Let the animals deal with the pollution. Anyways, let's start working on a Power Sub-Station to store EU and deliver it to our base.",
    "global_share": true,
    "icon": null,
    "is_global": false,
    "is_main": false,
    "is_silent": false,
    "locked_progress": 0,
    "name": "EU packets flowing everywhere...",
    "party_single_reward": false,
    "quest_logic": "AND",
    "repeat_relative": true,
    "repeat_time": -1,
    "simultaneous": false,
    "snd_complete": "random.levelup",
    "snd_update": "random.levelup",
    "task_logic": "AND",
    "visibility": "NORMAL"
  },
  "required_prerequisites": [
    1416
  ],
  "rewards": [],
  "tasks": []
}
