tests/snapshots/quests/parse_samples__snapshot_parse_all_sample_quests@samples__GT_New_Horizons_2.8.4_Client_Java_8.zip__config__betterquesting__DefaultQuests__Quests__StoringandTransf-AAAAAAAAAAAAAAAAAAAAIQ==__EV64AHatches-M_HRDMb8Q2GnvpgfgsRnRw==.json.snap
---
source: tests/parse_samples.rs
expression: quest
---
{
  "id": 14338409399725614919,
  "prerequisites": [
    17486145403338398092
  ],
  "properties": {
    "auto_claim": false,
    "desc": "You get the idea, these ones do 64A!",
    "global_share": false,
    "icon": null,
    "is_global": null,
    "is_main": false,
    "is_silent": false,
    "locked_progress": 0,
    "name": "EV 64A Hatches",
    "party_single_reward": null,
    "quest_logic": "AND",
    "repeat_relative": true,
    "repeat_time": -1,
    "simultaneous": false,
    "snd_complete": "random.levelup",
    "snd_update": "random.levelup",
    "task_logic": "OR",
    "visibility": "NORMAL"
  },
  "required_prerequisites": [
    17486145403338398092
  ],
  "rewards": [],
  "tasks": []
}
