tests/snapshots/quests/parse_samples__snapshot_parse_all_sample_quests@samples__GT_New_Horizons_2.8.4_Client_Java_8.zip__config__betterquesting__DefaultQuests__Quests__StoringandTransf-AAAAAAAAAAAAAAAAAAAAIQ==__EVBatteryBuffer-AAAAAAAAAAAAAAAAAAAE7g==.json.snap
---
source: tests/parse_samples.rs
expression: quest
---
{
  "id": 1262,
  "optional_prerequisites": [
    176,
    1142
  ],
  "prerequisites": [],
  "properties": {
    "auto_claim": false,
    "desc": "It's EV, OK?\n\n[note]Complete one task.[/note]",
    "global_share": true,
    "icon": null,
    "is_global": false,
    "is_main": false,
    "is_silent": false,
    "locked_progress": 0,
    "name": "EV Battery Buffer",
    "party_single_reward": false,
    "quest_logic": "OR",
    "repeat_relative": true,
    "repeat_time": -1,
    "simultaneous": false,
    "snd_complete": "random.levelup",
    "snd_update": "random.levelup",
    "task_logic": "OR",
    "visibility": "NORMAL"
  },
  "rewards": [],
  "tasks": []
}
