tests/snapshots/quests/parse_samples__snapshot_parse_all_sample_quests@samples__GT_New_Horizons_2.8.4_Client_Java_8.zip__config__betterquesting__DefaultQuests__Quests__StoringandTransf-AAAAAAAAAAAAAAAAAAAAIQ==__EnergizedWireles-49YfyyG5R8KKRRUKePOqfQ==.json.snap
---
source: tests/parse_samples.rs
expression: quest
---
{
  "id": 2430052374521555581,
  "prerequisites": [
    3235,
    3927784732497972212
  ],
  "properties": {
    "auto_claim": false,
    "desc": "The §5§lEnergized Wireless Dynamo Hatch§r acts just as you may expect; it will inject EU directly from an energy-producing multiblock into your wireless EU network. No need for those pesky laser conduits and LSC middlemen!\n\n[warn]The dynamo transfer rate is the same as the laser source it's crafted with: §l65kA UMV§r. Also has a very large internal storage.[/warn]\n\n[note]Great for §lDyson§r & §lLarge Naquadah Reactor§r.[/note]",
    "global_share": false,
    "icon": null,
    "is_global": null,
    "is_main": false,
    "is_silent": false,
    "locked_progress": 0,
    "name": "Energized Wireless Dynamo Hatch",
    "party_single_reward": null,
    "quest_logic": "AND",
    "repeat_relative": true,
    "repeat_time": -1,
    "simultaneous": false,
    "snd_complete": "random.levelup",
    "snd_update": "random.levelup",
    "task_logic": "AND",
    "visibility": "NORMAL"
  },
  "required_prerequisites": [
    3235,
    3927784732497972212
  ],
  "rewards": [],
  "tasks": []
}
